introducing primary and footer navigation
... also migrating from css to sass for nicer markup

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ markdown: redcarpet
 redcarpet:
   extensions: [with_toc_data, strikethrough, superscript, footnotes]
 highlighter: pygments
+sass:
+  style: compressed
