Changed email to organizers@bc.de

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ redcarpet:
 highlighter: pygments
 sass:
   style: compressed
-email: breathing@johanneslink.net
+email: organizers@breathing-code.de
