From markdown to kramdown

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Breathing Code
-markdown: redcarpet
+kramdown: redcarpet
 redcarpet:
   extensions: [with_toc_data, strikethrough, superscript, footnotes]
 highlighter: pygments
